--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,11 +10,13 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-kerning: normal;
+    font-weight: 400;
 }
-p {
+p, ul {
     margin: 0 0 1em 0;
 }
-p:last-child {
+p:last-child,
+ul:last-child {
     margin: 0;
 }
 .title {
@@ -24,7 +26,6 @@ p:last-child {
     letter-spacing: 3px;
     line-height: 1.3;
     margin: 0 0 3rem 0;
-    color: #2D1FE8;
 }
 .title--medium {
     font-size: 1.44em;
@@ -38,32 +39,26 @@ p:last-child {
 .title--big::after {
     content: '';
     margin: 1rem 0 0 0;
-    background-color: #2D1FE8;
+    background-color: #1539CF;
     display: block;
     width: 100%;
     height: .3rem;
-}
-p ~ img {
-    margin: 0;
 }
 .tiny {
     font-size: 0.833em;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 1;
-    color: #2D1FE8;
 }
-.vector {
-    margin: 1em 0;
+.section__img {
+    display: block;
+    margin: 2em auto;
 }
 .section {
     padding: 4em 2em;
     position: relative;
 }
-.section:first-of-type {
-    padding-top: 2em;
-}
-.section--pink::before {
+.section::before {
     position: absolute;
     content: '';
     top: 0;
@@ -71,5 +66,22 @@ p ~ img {
     z-index: -1;
     height: 100%;
     width: 100%;
-    background-color: #F1D3D3;
+}
+.section--black::before {
+    background-color: #000;
+}
+.section--blue::before {
+    background-color: #1539CF;  
+}
+.section--black *,
+.section--blue * {
+    color: #fff;
+}
+.list {
+    position: relative;
+}
+.list__item::before {
+    position: absolute;
+    left: -1em;
+    content: '\2013\00a0';
 }
