--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,30 +10,37 @@ body {
     -moz-osx-font-smoothing: grayscale;
     font-kerning: normal;
     font-weight: 400;
+    overflow-x: hidden;
 }
-p, ul {
+p, ul,
+.header__texts li {
     margin: 0 0 1em 0;
+    max-width: 45em;
 }
 p:last-child,
-ul:last-child {
-    margin: 0;
+ul:last-child,
+.header__texts li:last-child {
+    margin-bottom: 0;
 }
 .title {
     font-family: 'Archivo Black', Arial, Helvetica, sans-serif;
     font-size: 1.2em;
     text-transform: uppercase;
     letter-spacing: 3px;
-    line-height: 1.3;
+    line-height: 1.2;
+    text-align: center;
     margin: 0 0 3rem 0;
+    font-weight: 400;
 }
 .title--medium {
     font-size: 1.44em;
     text-align: right;
-    margin: 0 0 6em 0;
+    margin: 0 0 4em 0;
 }
 .title--big {
-    font-size: 2.488em;
-    margin: 0 0 1rem 0;
+    text-align: inherit;
+    font-size: 11vw;
+    margin: 0 0 5vw 0;
 }
 .title--big::after {
     content: '';
@@ -43,15 +50,18 @@ ul:last-child {
     width: 100%;
     height: .3rem;
 }
+.list--footer .list__item,
 .tiny {
     font-size: 0.833em;
     font-weight: 600;
     text-transform: uppercase;
-    letter-spacing: 1;
+    letter-spacing: 1px;
 }
 .section__img {
     display: block;
-    margin: 2em auto;
+    margin-top: 2em;
+    max-width: calc(100vw - 4em);
+    width: 100%;    
 }
 .section {
     padding: 4em 2em;
@@ -61,10 +71,10 @@ ul:last-child {
     position: absolute;
     content: '';
     top: 0;
-    left: 0;
+    left: -100%;
     z-index: -1;
     height: 100%;
-    width: 100%;
+    width: 300vw;
 }
 .section--black::before {
     background-color: #000;
@@ -76,6 +86,9 @@ ul:last-child {
 .section--blue * {
     color: #fff;
 }
+.header{
+    padding-top: 2em;
+}
 .list {
     position: relative;
 }
@@ -83,4 +96,60 @@ ul:last-child {
     position: absolute;
     left: -1em;
     content: '\2013\00a0';
+}
+.list--footer {
+    line-height: 2.5;
+}
+.list--footer .list__item::before {
+    display: none;
+}
+@media (min-width: 640px) and (orientation: portrait){
+    .title {
+        font-size: 1.44em;
+    }
+    .title--medium {
+        font-size: 1.728em;
+        margin: 0;
+    }
+    .title--big {
+        font-size: 11vw;
+    }
+    .section {
+        padding: 5em 3em;
+    }
+    .header {
+        height: calc(100vh - 10em);
+        display: flex;
+        flex-direction: column;
+    }
+    .header__texts {
+        margin-top: auto;
+        max-width: 26em;
+    }
+    .section__img {
+        margin-top: 4em;
+    }
+}
+@media (min-width: 1024px){
+    .title--big {
+        font-size: 6.192em;        ;
+    }
+    .section {
+        padding: 6em 2em;
+        width: 80vw;
+        max-width: 1280px;
+        margin: auto;
+    }
+    .header__texts {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        max-width: 100%;
+    }
+    .header__texts li {
+        margin-right: 3em;
+    }
+    .header__texts li:last-of-type {
+        margin-right: 0;
+    }
 }
