--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,25 @@
 @charset "utf-8";
 /* Fonts */
+@font-face {
+    font-family: 'Archivo Black';
+    src: url('../fonts/archivo-black.woff2');
+    font-weight: 400;
+}
+@font-face {
+    font-family: 'Work Sans';
+    src: url('../fonts/work-sans.woff2');
+    font-weight: 400;
+}
+@font-face {
+    font-family: 'Work Sans';
+    src: url('../fonts/work-sans-semibold.woff2');
+    font-weight: 600;
+}
+@font-face {
+    font-family: 'Work Sans';
+    src: url('../fonts/work-sans-bold.woff2');
+    font-weight: 700;
+}
 /* Global */
 html {
     font-size: 18px;
@@ -49,6 +69,12 @@ ul:last-child {
     width: 100%;
     height: .3rem;
 }
+.link {
+    font-weight: 700;
+}
+.link--blue{
+    color: #1539CF;
+}
 .tiny,
 .list--uppercase .list__item {
     font-size: 0.833em;
@@ -66,12 +92,6 @@ ul:last-child {
 }
 .list--uppercase .list__item::before {
     display: none;
-}
-.link {
-    font-weight: 800;
-}
-.link:visited {
-    color: black;
 }
 .section {
     padding: 4em 2em;
@@ -167,9 +187,8 @@ ul:last-child {
         font-size: 1.728em;
         margin-bottom: 0;
     }
-    .link:hover {
-        color: #1539CF;
-        transition: linear .5s;
+    .link--blue:hover {
+        color: #000;
     }
     .section {
         padding: 6em 1em;
